Fix button spacing

--- a/src/front/ui/components/content-list/style.scss
+++ b/src/front/ui/components/content-list/style.scss
@@ -129,7 +129,6 @@
 
 .fl-asst-list-detail {
 	.fl-asst-screen-title {
-		display: block;
 		overflow: hidden;
 		text-overflow: ellipsis;
 		white-space: nowrap;
