--- a/src/front/ui/components/panel-parts/style.scss
+++ b/src/front/ui/components/panel-parts/style.scss
@@ -11,6 +11,10 @@
     padding: 0 8px;
     position: relative;
 
+    .fl-asst-button {
+        margin:0;
+    }
+
     .fl-asst-panel-chrome-area {
         flex: 1 1 50%;
         display: flex;
